[gd_scene load_steps=11 format=2]

[ext_resource path="res://GFX/Players/PurpleRabbit.gd" type="Script" id=1]
[ext_resource path="res://GFX/Players/bunny2_ready.png" type="Texture" id=2]
[ext_resource path="res://GFX/Players/bunny2_stand.png" type="Texture" id=3]
[ext_resource path="res://GFX/Players/bunny2_walk1.png" type="Texture" id=4]
[ext_resource path="res://GFX/Players/bunny2_walk2.png" type="Texture" id=5]
[ext_resource path="res://GFX/Players/bunny2_jump.png" type="Texture" id=6]
[ext_resource path="res://SFX/jump1.ogg" type="AudioStream" id=7]
[ext_resource path="res://SFX/pain.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=1]
radius = 59.0
height = 72.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 113, 146 )
collision_mask = 30
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 59, 87 )
frames = SubResource( 2 )
animation = "Jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 59, 89 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 61, 112 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -500
limit_bottom = 2500
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="windelay" type="Timer" parent="."]

[node name="Jumping_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="Hurting_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="windelay" to="." method="_on_windelay_timeout"]
